# sp211-docs

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
data/production/: DT_ilceler.gpkg  edges_ilceler.csv  nodes_ilceler.csv
data/test/: edges.csv  nodes.csv
docs/: requirements.txt
docs/docs/source/: modules.rst  tests.rst
docs/source/: conf.py  modules.rst  requirements.txt  sp211.rst
examples/: main.py
examples/output/: shortest_path.gpkg
src/sp211/: dijkstra.py  graph.py  new_feature.py
src/sp211_2220674043_89.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_dijkstra.py  test_graph.py  test_new_feature.py  test_newfeature_fuelcost.py  test_newfeature_totaldistance.py
